--- a/coba.ipynb
+++ b/coba.ipynb
@@ -654,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a072242d",
    "metadata": {},
    "outputs": [
@@ -663,48 +663,182 @@
      "output_type": "stream",
      "text": [
       "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
-      "Mencoba membuka URL: https://shopee.co.id/search?keyword=baju\n",
+      "Mencoba membuka URL: https://shopee.co.id\n",
       "URL berhasil dibuka! Menunggu 15 detik...\n",
-      "URL saat ini: https://shopee.co.id/search?keyword=baju\n",
+      "Search successful!\n",
+      "Driver ditutup.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# import time\n",
+    "# import undetected_chromedriver as uc\n",
+    "# from selenium.webdriver.common.by import By\n",
+    "# from selenium.webdriver.common.keys import Keys\n",
+    "# from selenium.webdriver.common.action_chains import ActionChains\n",
+    "# import random\n",
+    "# import os\n",
+    "\n",
+    "# # URL target\n",
+    "# url = \"https://shopee.co.id\"\n",
+    "\n",
+    "# # Tidak perlu Service, tidak perlu Options (dia otomatis cari profil)\n",
+    "# # Namun, kita bisa tambahkan path profil jika mau\n",
+    "# # --- SOLUSI 2: Arahkan path langsung ke folder 'Profile 3' ---\n",
+    "# base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
+    "# profile_folder = \"Profile 3\"\n",
+    "\n",
+    "# # Buat path lengkap ke folder profil\n",
+    "# # Hasilnya: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
+    "# full_profile_path = os.path.join(base_path, profile_folder)\n",
+    "# print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
+    "\n",
+    "# try:\n",
+    "#     # --- 2. GUNAKAN uc.Chrome() ---\n",
+    "#     # Dia akan otomatis mencari chromedriver yang cocok\n",
+    "#     driver = uc.Chrome(\n",
+    "#         user_data_dir=full_profile_path,\n",
+    "#     )\n",
+    "#     # ------------------------------\n",
+    "    \n",
+    "#     print(f\"Mencoba membuka URL: {url}\")\n",
+    "#     driver.get(url)\n",
+    "    \n",
+    "#     print(\"URL berhasil dibuka! Menunggu 15 detik...\")\n",
+    "#     time.sleep(2)\n",
+    "\n",
+    "\n",
+    "#     search_bar = driver.find_element(By.CLASS_NAME, \"shopee-searchbar-input__input\")\n",
+    "\n",
+    "#     search_bar.clear()\n",
+    "\n",
+    "#     time.sleep(2)\n",
+    "\n",
+    "#     search_term = \"Back Pack\"\n",
+    "#     for char in search_term:\n",
+    "#         search_bar.send_keys(char)\n",
+    "#         time.sleep(random.uniform(0.05, 0.3))\n",
+    "\n",
+    "#     search_button = driver.find_element(By.CSS_SELECTOR, \".btn.shopee-searchbar__search-button\")\n",
+    "#     search_button.click()\n",
+    "\n",
+    "#     time.sleep(1)\n",
+    "\n",
+    "#     print(\"Search successful!\")\n",
+    "\n",
+    "\n",
+    "# except Exception as e:\n",
+    "#     print(f\"Gagal menjalankan driver atau membuka URL.\")\n",
+    "#     print(f\"Error: {e}\")\n",
+    "\n",
+    "# finally:\n",
+    "#     if 'driver' in locals():\n",
+    "#         input(\"Tekan Enter untuk menutup browser...\")\n",
+    "#         driver.quit()\n",
+    "#         print(\"Driver ditutup.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "309e93d2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Memulai driver dengan profil: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
+      "Driver dimulai, menunggu 5 detik agar profil siap...\n",
+      "Mencoba membuka URL: https://shopee.co.id\n",
+      "Menunggu 7 detik hingga halaman dimuat sepenuhnya...\n",
+      "Mensimulasikan gerakan mouse ke search bar...\n",
+      "Mensimulasikan pengetikan...\n",
+      "Mensimulasikan gerakan mouse ke tombol cari...\n",
+      "Pencarian berhasil diklik! Menunggu hasil...\n",
+      "URL Saat Ini: https://shopee.co.id/\n",
+      "BERHASIL: Sepertinya kita ada di halaman hasil pencarian!\n",
       "Driver ditutup.\n"
      ]
     }
    ],
    "source": [
     "import time\n",
+    "import undetected_chromedriver as uc\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "import random\n",
     "import os\n",
-    "import undetected_chromedriver as uc # <-- 1. Import 'uc'\n",
     "\n",
-    "# URL target\n",
-    "url = \"https://shopee.co.id/search?keyword=baju\"\n",
-    "\n",
-    "# Tidak perlu Service, tidak perlu Options (dia otomatis cari profil)\n",
-    "# Namun, kita bisa tambahkan path profil jika mau\n",
-    "# --- SOLUSI 2: Arahkan path langsung ke folder 'Profile 3' ---\n",
+    "# --- 1. SET UP PROFIL DAN URL ---\n",
+    "url = \"https://shopee.co.id\"\n",
     "base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
     "profile_folder = \"Profile 3\"\n",
-    "\n",
-    "# Buat path lengkap ke folder profil\n",
-    "# Hasilnya: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
     "full_profile_path = os.path.join(base_path, profile_folder)\n",
-    "print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
+    "\n",
+    "# --- 2. SET UP OPTIONS ---\n",
+    "options = uc.ChromeOptions()\n",
+    "options.add_argument(\"--start-maximized\") # <-- Buat jendela terlihat normal\n",
+    "options.add_argument(\"--disable-infobars\")\n",
+    "options.add_argument(\"--disable-extensions\") # Nonaktifkan ekstensi jika mengganggu\n",
+    "options.add_argument('--no-first-run --no-service-autorun --password-store=basic')\n",
     "\n",
     "try:\n",
-    "    # --- 2. GUNAKAN uc.Chrome() ---\n",
-    "    # Dia akan otomatis mencari chromedriver yang cocok\n",
+    "    print(f\"Memulai driver dengan profil: {full_profile_path}\")\n",
     "    driver = uc.Chrome(\n",
     "        user_data_dir=full_profile_path,\n",
+    "        options=options,\n",
+    "        headless=False, # Pastikan tidak headless\n",
+    "        use_subprocess=True\n",
     "    )\n",
-    "    # ------------------------------\n",
+    "    \n",
+    "    print(\"Driver dimulai, menunggu 5 detik agar profil siap...\")\n",
+    "    time.sleep(5)\n",
     "    \n",
     "    print(f\"Mencoba membuka URL: {url}\")\n",
     "    driver.get(url)\n",
     "    \n",
-    "    print(\"URL berhasil dibuka! Menunggu 15 detik...\")\n",
-    "    time.sleep(1) \n",
-    "    \n",
-    "    print(f\"URL saat ini: {driver.current_url}\")\n",
+    "    print(\"Menunggu 7 detik hingga halaman dimuat sepenuhnya...\")\n",
+    "    time.sleep(7)\n",
     "\n",
+    "    # --- 3. SIMULASI INTERAKSI MANUSIA ---\n",
+    "    \n",
+    "    # A. Temukan Elemen (Gunakan XPath/CSS yang stabil)\n",
+    "    search_bar_selector = \"//input[@class='shopee-searchbar-input__input']\"\n",
+    "    search_button_selector = \"//button[contains(@class, 'shopee-searchbar__search-button')]\"\n",
+    "    \n",
+    "    search_bar = driver.find_element(By.XPATH, search_bar_selector)\n",
+    "    search_button = driver.find_element(By.XPATH, search_button_selector)\n",
+    "\n",
+    "    # B. Gerakkan Mouse ke Search Bar (Tiru Manusia)\n",
+    "    print(\"Mensimulasikan gerakan mouse ke search bar...\")\n",
+    "    actions = ActionChains(driver)\n",
+    "    actions.move_to_element(search_bar).pause(random.uniform(0.5, 1.5)).click().perform()\n",
+    "\n",
+    "    # C. Ketik Seperti Manusia (dengan jeda acak)\n",
+    "    print(\"Mensimulasikan pengetikan...\")\n",
+    "    search_term = \"Back Pack\"\n",
+    "    for char in search_term:\n",
+    "        search_bar.send_keys(char)\n",
+    "        time.sleep(random.uniform(0.08, 0.25)) # Jeda antar ketukan\n",
+    "\n",
+    "    # D. Jeda sejenak (manusia berpikir)\n",
+    "    time.sleep(random.uniform(1.0, 2.0))\n",
+    "\n",
+    "    # E. Gerakkan Mouse ke Tombol Cari dan Klik\n",
+    "    print(\"Mensimulasikan gerakan mouse ke tombol cari...\")\n",
+    "    actions = ActionChains(driver)\n",
+    "    actions.move_to_element(search_button).pause(random.uniform(0.5, 1.0)).click().perform()\n",
+    "    \n",
+    "    print(\"Pencarian berhasil diklik! Menunggu hasil...\")\n",
+    "    time.sleep(15) # Tunggu hasil\n",
+    "    \n",
+    "    print(f\"URL Saat Ini: {driver.current_url}\")\n",
+    "    if \"verify\" in driver.current_url:\n",
+    "        print(\"GAGAL: Masih dialihkan ke halaman verifikasi.\")\n",
+    "    else:\n",
+    "        print(\"BERHASIL: Sepertinya kita ada di halaman hasil pencarian!\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Gagal menjalankan driver atau membuka URL.\")\n",
@@ -720,7 +854,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "309e93d2",
+   "id": "5e9befc1",
    "metadata": {},
    "outputs": [],
    "source": []
