--- a/coba.ipynb
+++ b/coba.ipynb
@@ -663,7 +663,7 @@
      "output_type": "stream",
      "text": [
       "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
-      "Mencoba membuka URL: https://shopee.co.id\n",
+      "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
       "URL berhasil dibuka! Menunggu 15 detik...\n",
       "Search successful!\n",
       "Driver ditutup.\n"
@@ -680,7 +680,7 @@
     "# import os\n",
     "\n",
     "# # URL target\n",
-    "# url = \"https://shopee.co.id\"\n",
+    "# url = \"https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\"\n",
     "\n",
     "# # Tidak perlu Service, tidak perlu Options (dia otomatis cari profil)\n",
     "# # Namun, kita bisa tambahkan path profil jika mau\n",
@@ -701,6 +701,8 @@
     "#     )\n",
     "#     # ------------------------------\n",
     "    \n",
+    "#     time.sleep(2)\n",
+    "\n",
     "#     print(f\"Mencoba membuka URL: {url}\")\n",
     "#     driver.get(url)\n",
     "    \n",
@@ -740,7 +742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "309e93d2",
    "metadata": {},
    "outputs": [
@@ -763,6 +765,113 @@
     }
    ],
    "source": [
+    "# import time\n",
+    "# import undetected_chromedriver as uc\n",
+    "# from selenium.webdriver.common.by import By\n",
+    "# from selenium.webdriver.common.keys import Keys\n",
+    "# from selenium.webdriver.common.action_chains import ActionChains\n",
+    "# import random\n",
+    "# import os\n",
+    "\n",
+    "# # --- 1. SET UP PROFIL DAN URL ---\n",
+    "# url = \"https://shopee.co.id\"\n",
+    "# base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
+    "# profile_folder = \"Profile 3\"\n",
+    "# full_profile_path = os.path.join(base_path, profile_folder)\n",
+    "\n",
+    "# # --- 2. SET UP OPTIONS ---\n",
+    "# options = uc.ChromeOptions()\n",
+    "# options.add_argument(\"--start-maximized\") # <-- Buat jendela terlihat normal\n",
+    "# options.add_argument(\"--disable-infobars\")\n",
+    "# options.add_argument(\"--disable-extensions\") # Nonaktifkan ekstensi jika mengganggu\n",
+    "# options.add_argument('--no-first-run --no-service-autorun --password-store=basic')\n",
+    "\n",
+    "# try:\n",
+    "#     print(f\"Memulai driver dengan profil: {full_profile_path}\")\n",
+    "#     driver = uc.Chrome(\n",
+    "#         user_data_dir=full_profile_path,\n",
+    "#         options=options,\n",
+    "#         headless=False, # Pastikan tidak headless\n",
+    "#         use_subprocess=True\n",
+    "#     )\n",
+    "    \n",
+    "#     print(\"Driver dimulai, menunggu 5 detik agar profil siap...\")\n",
+    "#     time.sleep(5)\n",
+    "    \n",
+    "#     print(f\"Mencoba membuka URL: {url}\")\n",
+    "#     driver.get(url)\n",
+    "    \n",
+    "#     print(\"Menunggu 7 detik hingga halaman dimuat sepenuhnya...\")\n",
+    "#     time.sleep(7)\n",
+    "\n",
+    "#     # --- 3. SIMULASI INTERAKSI MANUSIA ---\n",
+    "    \n",
+    "#     # A. Temukan Elemen (Gunakan XPath/CSS yang stabil)\n",
+    "#     search_bar_selector = \"//input[@class='shopee-searchbar-input__input']\"\n",
+    "#     search_button_selector = \"//button[contains(@class, 'shopee-searchbar__search-button')]\"\n",
+    "    \n",
+    "#     search_bar = driver.find_element(By.XPATH, search_bar_selector)\n",
+    "#     search_button = driver.find_element(By.XPATH, search_button_selector)\n",
+    "\n",
+    "#     # B. Gerakkan Mouse ke Search Bar (Tiru Manusia)\n",
+    "#     print(\"Mensimulasikan gerakan mouse ke search bar...\")\n",
+    "#     actions = ActionChains(driver)\n",
+    "#     actions.move_to_element(search_bar).pause(random.uniform(0.5, 1.5)).click().perform()\n",
+    "\n",
+    "#     # C. Ketik Seperti Manusia (dengan jeda acak)\n",
+    "#     print(\"Mensimulasikan pengetikan...\")\n",
+    "#     search_term = \"Back Pack\"\n",
+    "#     for char in search_term:\n",
+    "#         search_bar.send_keys(char)\n",
+    "#         time.sleep(random.uniform(0.08, 0.25)) # Jeda antar ketukan\n",
+    "\n",
+    "#     # D. Jeda sejenak (manusia berpikir)\n",
+    "#     time.sleep(random.uniform(1.0, 2.0))\n",
+    "\n",
+    "#     # E. Gerakkan Mouse ke Tombol Cari dan Klik\n",
+    "#     print(\"Mensimulasikan gerakan mouse ke tombol cari...\")\n",
+    "#     actions = ActionChains(driver)\n",
+    "#     actions.move_to_element(search_button).pause(random.uniform(0.5, 1.0)).click().perform()\n",
+    "    \n",
+    "#     print(\"Pencarian berhasil diklik! Menunggu hasil...\")\n",
+    "#     time.sleep(15) # Tunggu hasil\n",
+    "    \n",
+    "#     print(f\"URL Saat Ini: {driver.current_url}\")\n",
+    "#     if \"verify\" in driver.current_url:\n",
+    "#         print(\"GAGAL: Masih dialihkan ke halaman verifikasi.\")\n",
+    "#     else:\n",
+    "#         print(\"BERHASIL: Sepertinya kita ada di halaman hasil pencarian!\")\n",
+    "\n",
+    "# except Exception as e:\n",
+    "#     print(f\"Gagal menjalankan driver atau membuka URL.\")\n",
+    "#     print(f\"Error: {e}\")\n",
+    "\n",
+    "# finally:\n",
+    "#     if 'driver' in locals():\n",
+    "#         input(\"Tekan Enter untuk menutup browser...\")\n",
+    "#         driver.quit()\n",
+    "#         print(\"Driver ditutup.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "1bfb36fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
+      "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
+      "URL berhasil dibuka! Menunggu 15 detik...\n",
+      "Search successful!\n",
+      "Driver ditutup.\n"
+     ]
+    }
+   ],
+   "source": [
     "import time\n",
     "import undetected_chromedriver as uc\n",
     "from selenium.webdriver.common.by import By\n",
@@ -771,74 +880,31 @@
     "import random\n",
     "import os\n",
     "\n",
-    "# --- 1. SET UP PROFIL DAN URL ---\n",
-    "url = \"https://shopee.co.id\"\n",
+    "# URL target\n",
+    "url = \"https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\"\n",
     "base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
     "profile_folder = \"Profile 3\"\n",
     "full_profile_path = os.path.join(base_path, profile_folder)\n",
-    "\n",
-    "# --- 2. SET UP OPTIONS ---\n",
-    "options = uc.ChromeOptions()\n",
-    "options.add_argument(\"--start-maximized\") # <-- Buat jendela terlihat normal\n",
-    "options.add_argument(\"--disable-infobars\")\n",
-    "options.add_argument(\"--disable-extensions\") # Nonaktifkan ekstensi jika mengganggu\n",
-    "options.add_argument('--no-first-run --no-service-autorun --password-store=basic')\n",
+    "print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
     "\n",
     "try:\n",
-    "    print(f\"Memulai driver dengan profil: {full_profile_path}\")\n",
+    "    # --- 2. GUNAKAN uc.Chrome() ---\n",
+    "    # Dia akan otomatis mencari chromedriver yang cocok\n",
     "    driver = uc.Chrome(\n",
     "        user_data_dir=full_profile_path,\n",
-    "        options=options,\n",
-    "        headless=False, # Pastikan tidak headless\n",
-    "        use_subprocess=True\n",
     "    )\n",
+    "    # ------------------------------\n",
     "    \n",
-    "    print(\"Driver dimulai, menunggu 5 detik agar profil siap...\")\n",
-    "    time.sleep(5)\n",
+    "    time.sleep(2)\n",
     "    \n",
     "    print(f\"Mencoba membuka URL: {url}\")\n",
     "    driver.get(url)\n",
     "    \n",
-    "    print(\"Menunggu 7 detik hingga halaman dimuat sepenuhnya...\")\n",
-    "    time.sleep(7)\n",
+    "    print(\"URL berhasil dibuka! Menunggu 15 detik...\")\n",
+    "    time.sleep(2)\n",
     "\n",
-    "    # --- 3. SIMULASI INTERAKSI MANUSIA ---\n",
-    "    \n",
-    "    # A. Temukan Elemen (Gunakan XPath/CSS yang stabil)\n",
-    "    search_bar_selector = \"//input[@class='shopee-searchbar-input__input']\"\n",
-    "    search_button_selector = \"//button[contains(@class, 'shopee-searchbar__search-button')]\"\n",
-    "    \n",
-    "    search_bar = driver.find_element(By.XPATH, search_bar_selector)\n",
-    "    search_button = driver.find_element(By.XPATH, search_button_selector)\n",
+    "    print(\"Search successful!\")\n",
     "\n",
-    "    # B. Gerakkan Mouse ke Search Bar (Tiru Manusia)\n",
-    "    print(\"Mensimulasikan gerakan mouse ke search bar...\")\n",
-    "    actions = ActionChains(driver)\n",
-    "    actions.move_to_element(search_bar).pause(random.uniform(0.5, 1.5)).click().perform()\n",
-    "\n",
-    "    # C. Ketik Seperti Manusia (dengan jeda acak)\n",
-    "    print(\"Mensimulasikan pengetikan...\")\n",
-    "    search_term = \"Back Pack\"\n",
-    "    for char in search_term:\n",
-    "        search_bar.send_keys(char)\n",
-    "        time.sleep(random.uniform(0.08, 0.25)) # Jeda antar ketukan\n",
-    "\n",
-    "    # D. Jeda sejenak (manusia berpikir)\n",
-    "    time.sleep(random.uniform(1.0, 2.0))\n",
-    "\n",
-    "    # E. Gerakkan Mouse ke Tombol Cari dan Klik\n",
-    "    print(\"Mensimulasikan gerakan mouse ke tombol cari...\")\n",
-    "    actions = ActionChains(driver)\n",
-    "    actions.move_to_element(search_button).pause(random.uniform(0.5, 1.0)).click().perform()\n",
-    "    \n",
-    "    print(\"Pencarian berhasil diklik! Menunggu hasil...\")\n",
-    "    time.sleep(15) # Tunggu hasil\n",
-    "    \n",
-    "    print(f\"URL Saat Ini: {driver.current_url}\")\n",
-    "    if \"verify\" in driver.current_url:\n",
-    "        print(\"GAGAL: Masih dialihkan ke halaman verifikasi.\")\n",
-    "    else:\n",
-    "        print(\"BERHASIL: Sepertinya kita ada di halaman hasil pencarian!\")\n",
     "\n",
     "except Exception as e:\n",
     "    print(f\"Gagal menjalankan driver atau membuka URL.\")\n",
@@ -854,7 +920,110 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e9befc1",
+   "id": "7674ef42",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
+      "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
+      "URL Halaman 1 berhasil dibuka! Menunggu 10 detik...\n",
+      "Berhasil menyimpan HTML ke: shopee_page_2.html\n",
+      "\n",
+      "--- Memproses Halaman 2 ---\n",
+      "Berhasil menyimpan HTML ke: shopee_page_2.html\n",
+      "\n",
+      "--- Memproses Halaman 3 ---\n",
+      "Berhasil menyimpan HTML ke: shopee_page_3.html\n"
+     ]
+    }
+   ],
+   "source": [
+    "import time\n",
+    "import undetected_chromedriver as uc\n",
+    "from selenium.webdriver.common.by import By\n",
+    "from selenium.webdriver.common.keys import Keys\n",
+    "from selenium.webdriver.common.action_chains import ActionChains\n",
+    "import random\n",
+    "import os\n",
+    "\n",
+    "# Import baru yang penting\n",
+    "from selenium.webdriver.support.ui import WebDriverWait\n",
+    "from selenium.webdriver.support import expected_conditions as EC\n",
+    "\n",
+    "# --- Persiapan Profile ---\n",
+    "base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
+    "profile_folder = \"Profile 3\"\n",
+    "full_profile_path = os.path.join(base_path, profile_folder)\n",
+    "print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
+    "# -------------------------\n",
+    "\n",
+    "# URL Halaman 1\n",
+    "page=0\n",
+    "start_url = f\"https://shopee.co.id/search?keyword=back%20pack&page={0+page}&sortBy=sales\"\n",
+    "\n",
+    "try:\n",
+    "    driver = uc.Chrome(\n",
+    "        user_data_dir=full_profile_path,\n",
+    "    )\n",
+    "    actions = ActionChains(driver)\n",
+    "    wait = WebDriverWait(driver, 15) # Tentukan waktu tunggu maksimal 15 detik\n",
+    "\n",
+    "    print(f\"Mencoba membuka URL: {start_url}\")\n",
+    "    driver.get(start_url)\n",
+    "    \n",
+    "    print(\"URL Halaman 1 berhasil dibuka! Menunggu 10 detik...\")\n",
+    "    time.sleep(10) # Tunggu awal agar halaman 1 termuat penuh\n",
+    "    \n",
+    "    page_html = driver.page_source\n",
+    "    file_name = f\"shopee_page_{i}.html\"\n",
+    "\n",
+    "    try:\n",
+    "        with open(file_name, \"w\", encoding=\"utf-8\") as f:\n",
+    "            f.write(page_html)\n",
+    "            print(f\"Berhasil menyimpan HTML ke: {file_name}\")\n",
+    "    except Exception as e_save:\n",
+    "        print(f\"Gagal menyimpan file HTML: {e_save}\")\n",
+    "\n",
+    "    # Kita akan coba pindah dari halaman 1 ke 5\n",
+    "    for i in range(1, 3): # Akan loop 4 kali (untuk klik ke hal 2, 3, 4, 5)\n",
+    "        \n",
+    "        print(f\"\\n--- Memproses Halaman {i+1} ---\")\n",
+    "        \n",
+    "        page = page + i\n",
+    "        start_url = f\"https://shopee.co.id/search?keyword=back%20pack&page={0+page}&sortBy=sales\"\n",
+    "\n",
+    "        driver.get(start_url)\n",
+    "        time.sleep(10)\n",
+    "\n",
+    "        page_html = driver.page_source\n",
+    "        file_name = f\"shopee_page_{i+1}.html\"\n",
+    "\n",
+    "        try:\n",
+    "            with open(file_name, \"w\", encoding=\"utf-8\") as f:\n",
+    "                f.write(page_html)\n",
+    "                print(f\"Berhasil menyimpan HTML ke: {file_name}\")\n",
+    "        except Exception as e_save:\n",
+    "            print(f\"Gagal menyimpan file HTML: {e_save}\")\n",
+    "\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Gagal menjalankan driver atau membuka URL.\")\n",
+    "    print(f\"Error: {e}\")\n",
+    "\n",
+    "finally:\n",
+    "    if 'driver' in locals():\n",
+    "        input(\"Tekan Enter untuk menutup browser...\")\n",
+    "        driver.quit()\n",
+    "        print(\"Driver ditutup.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0d5e0bf9",
    "metadata": {},
    "outputs": [],
    "source": []
