--- a/coba.ipynb
+++ b/coba.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "id": "a04705af",
    "metadata": {},
    "outputs": [],
@@ -12,17 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "f427250c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "gc = gspread.oauth(credentials_filename='credentials.json')"
+    "gc = gspread.oauth(credentials_filename='./credentials.json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "85623563",
    "metadata": {},
    "outputs": [
@@ -32,7 +32,7 @@
        "<Spreadsheet 'Copy of Torch Arrival Data' id:1xEqT4kghsaAZYTdN7SN9UHN31Ehx29OykbG1Mjpm-go>"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "390ef61c",
    "metadata": {},
    "outputs": [
@@ -55,7 +55,7 @@
        "<Worksheet 'Shopee' id:0>"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "a548ab20",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        " <Worksheet 'TokoMargonda' id:1960044452>]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "51d769a2",
    "metadata": {},
    "outputs": [],
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "id": "d4efce07",
    "metadata": {},
    "outputs": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 8,
    "id": "92d89b27",
    "metadata": {},
    "outputs": [
@@ -439,7 +439,7 @@
        "4            334  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 9,
    "id": "4972148f",
    "metadata": {},
    "outputs": [
@@ -461,7 +461,7 @@
        "270"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -472,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 10,
    "id": "9cc77778",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        "[270 rows x 3 columns]"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 11,
    "id": "bcf4fe9e",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "e2cb539b",
    "metadata": {},
    "outputs": [],
@@ -639,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "03a68876",
    "metadata": {},
    "outputs": [],
@@ -648,28 +648,16 @@
     "# service = Service(executable_path=path_ke_driver)\n",
     "# service=service\n",
     "\n",
-    "user_data_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\" \n",
+    "user_data_path = r\"/mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data\" \n",
     "profile_directory = \"Profile 3\" "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "a072242d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
-      "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
-      "URL berhasil dibuka! Menunggu 15 detik...\n",
-      "Search successful!\n",
-      "Driver ditutup.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import time\n",
     "# import undetected_chromedriver as uc\n",
@@ -742,28 +730,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "309e93d2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Memulai driver dengan profil: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
-      "Driver dimulai, menunggu 5 detik agar profil siap...\n",
-      "Mencoba membuka URL: https://shopee.co.id\n",
-      "Menunggu 7 detik hingga halaman dimuat sepenuhnya...\n",
-      "Mensimulasikan gerakan mouse ke search bar...\n",
-      "Mensimulasikan pengetikan...\n",
-      "Mensimulasikan gerakan mouse ke tombol cari...\n",
-      "Pencarian berhasil diklik! Menunggu hasil...\n",
-      "URL Saat Ini: https://shopee.co.id/\n",
-      "BERHASIL: Sepertinya kita ada di halaman hasil pencarian!\n",
-      "Driver ditutup.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# import time\n",
     "# import undetected_chromedriver as uc\n",
@@ -855,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "1bfb36fb",
    "metadata": {},
    "outputs": [
@@ -863,7 +833,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
       "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
       "URL berhasil dibuka! Menunggu 15 detik...\n",
       "Search successful!\n",
@@ -882,17 +851,14 @@
     "\n",
     "# URL target\n",
     "url = \"https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\"\n",
-    "base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
-    "profile_folder = \"Profile 3\"\n",
-    "full_profile_path = os.path.join(base_path, profile_folder)\n",
-    "print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
+    "user_data_path = \"/mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data/Profile 6\"\n",
+    "profile_name = \"Profile 6\"\n",
+    "chrome_exe_path = \"/mnt/c/Program Files/Google/Chrome/Application/chrome.exe\"\n",
     "\n",
     "try:\n",
     "    # --- 2. GUNAKAN uc.Chrome() ---\n",
     "    # Dia akan otomatis mencari chromedriver yang cocok\n",
-    "    driver = uc.Chrome(\n",
-    "        user_data_dir=full_profile_path,\n",
-    "    )\n",
+    "    driver = uc.Chrome()\n",
     "    # ------------------------------\n",
     "    \n",
     "    time.sleep(2)\n",
@@ -919,7 +885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7674ef42",
    "metadata": {},
    "outputs": [
@@ -927,16 +893,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mencoba memuat profil dari: C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\\Profile 3\n",
-      "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
-      "URL Halaman 1 berhasil dibuka! Menunggu 10 detik...\n",
-      "Berhasil menyimpan HTML ke: shopee_page_2.html\n",
-      "\n",
-      "--- Memproses Halaman 2 ---\n",
-      "Berhasil menyimpan HTML ke: shopee_page_2.html\n",
-      "\n",
-      "--- Memproses Halaman 3 ---\n",
-      "Berhasil menyimpan HTML ke: shopee_page_3.html\n"
+      "Mencoba memuat profil dari: /mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data/Profile 3\n",
+      "Gagal menjalankan driver atau membuka URL.\n",
+      "Error: Binary Location Must be a String\n"
      ]
     }
    ],
@@ -954,7 +913,7 @@
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "\n",
     "# --- Persiapan Profile ---\n",
-    "base_path = r\"C:\\Users\\dioni\\AppData\\Local\\Google\\Chrome\\User Data\"\n",
+    "base_path = f\"/mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data\"\n",
     "profile_folder = \"Profile 3\"\n",
     "full_profile_path = os.path.join(base_path, profile_folder)\n",
     "print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
@@ -1031,7 +990,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -1045,7 +1004,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
