update-final-berfore-deploy

--- a/coba.ipynb
+++ b/coba.ipynb
@@ -825,7 +825,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "id": "1bfb36fb",
    "metadata": {},
    "outputs": [
@@ -849,19 +849,30 @@
     "import random\n",
     "import os\n",
     "\n",
+    "base_path = \"/root/chrome-uc-profile\"\n",
+    "os.makedirs(base_path, exist_ok=True)\n",
+    "profile_folder=\"Profile 1\"\n",
+    "\n",
     "# URL target\n",
     "url = \"https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\"\n",
-    "user_data_path = \"/mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data/Profile 6\"\n",
-    "profile_name = \"Profile 6\"\n",
-    "chrome_exe_path = \"/mnt/c/Program Files/Google/Chrome/Application/chrome.exe\"\n",
+    "\n",
+    "options = uc.ChromeOptions()\n",
+    "options.add_argument('--no-sandbox')\n",
+    "options.add_argument('--disable-dev-shm-usage')\n",
+    "options.add_argument(\"--disable-extensions\") \n",
+    "options.add_argument(\"--disable-popup-blocking\")\n",
+    "options.add_argument(\"--start-maximized\")\n",
     "\n",
     "try:\n",
     "    # --- 2. GUNAKAN uc.Chrome() ---\n",
     "    # Dia akan otomatis mencari chromedriver yang cocok\n",
-    "    driver = uc.Chrome()\n",
+    "    driver = uc.Chrome(user_data_dir=base_path,\n",
+    "                       profile_directory=profile_folder,\n",
+    "                       use_subprocess=False,\n",
+    "                       options=options)\n",
     "    # ------------------------------\n",
     "    \n",
-    "    time.sleep(2)\n",
+    "    time.sleep(10)\n",
     "    \n",
     "    print(f\"Mencoba membuka URL: {url}\")\n",
     "    driver.get(url)\n",
@@ -885,7 +896,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "id": "7674ef42",
    "metadata": {},
    "outputs": [
@@ -893,9 +904,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Mencoba memuat profil dari: /mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data/Profile 3\n",
-      "Gagal menjalankan driver atau membuka URL.\n",
-      "Error: Binary Location Must be a String\n"
+      "Mencoba membuka URL: https://shopee.co.id/search?keyword=back%20pack&page=0&sortBy=sales\n",
+      "URL Halaman 1 berhasil dibuka! Menunggu 10 detik...\n",
+      "Berhasil menyimpan HTML ke: shopee_page_1.html\n",
+      "\n",
+      "--- Memproses Halaman 2 ---\n",
+      "Berhasil menyimpan HTML ke: shopee_page_2.html\n",
+      "\n",
+      "--- Memproses Halaman 3 ---\n",
+      "Berhasil menyimpan HTML ke: shopee_page_3.html\n",
+      "Driver ditutup.\n"
      ]
     }
    ],
@@ -912,21 +930,27 @@
     "from selenium.webdriver.support.ui import WebDriverWait\n",
     "from selenium.webdriver.support import expected_conditions as EC\n",
     "\n",
-    "# --- Persiapan Profile ---\n",
-    "base_path = f\"/mnt/c/Users/dioni/AppData/Local/Google/Chrome/User Data\"\n",
-    "profile_folder = \"Profile 3\"\n",
-    "full_profile_path = os.path.join(base_path, profile_folder)\n",
-    "print(f\"Mencoba memuat profil dari: {full_profile_path}\")\n",
-    "# -------------------------\n",
-    "\n",
     "# URL Halaman 1\n",
     "page=0\n",
     "start_url = f\"https://shopee.co.id/search?keyword=back%20pack&page={0+page}&sortBy=sales\"\n",
     "\n",
+    "base_path = \"/root/chrome-uc-profile\"\n",
+    "os.makedirs(base_path, exist_ok=True)\n",
+    "profile_folder=\"Profile 1\"\n",
+    "\n",
+    "options = uc.ChromeOptions()\n",
+    "options.add_argument('--no-sandbox')\n",
+    "options.add_argument('--disable-dev-shm-usage')\n",
+    "options.add_argument(\"--disable-extensions\") \n",
+    "options.add_argument(\"--disable-popup-blocking\")\n",
+    "options.add_argument(\"--start-maximized\")\n",
+    "\n",
     "try:\n",
-    "    driver = uc.Chrome(\n",
-    "        user_data_dir=full_profile_path,\n",
-    "    )\n",
+    "    driver = uc.Chrome(user_data_dir=base_path,\n",
+    "                       profile_directory=profile_folder,\n",
+    "                       use_subprocess=False,\n",
+    "                       options=options)\n",
+    "    \n",
     "    actions = ActionChains(driver)\n",
     "    wait = WebDriverWait(driver, 15) # Tentukan waktu tunggu maksimal 15 detik\n",
     "\n",
@@ -937,7 +961,7 @@
     "    time.sleep(10) # Tunggu awal agar halaman 1 termuat penuh\n",
     "    \n",
     "    page_html = driver.page_source\n",
-    "    file_name = f\"shopee_page_{i}.html\"\n",
+    "    file_name = f\"shopee_page_{1}.html\"\n",
     "\n",
     "    try:\n",
     "        with open(file_name, \"w\", encoding=\"utf-8\") as f:\n",
